@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.7 2004/01/23 21:50:47 jmmv Exp $
+# $NetBSD: Makefile,v 1.8 2004/02/16 19:40:39 hubertf Exp $
 #
 
-DISTNAME=	nicotine-1.0.6
-PKGREVISION=	2
+DISTNAME=	nicotine-1.0.7
 CATEGORIES=	net audio x11
 MASTER_SITES=	http://nicotine.thegraveyard.org/
 EXTRACT_SUFX=	.tar.bz2
