@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.4862 2004/02/16 17:54:14 minskim Exp $
+$NetBSD: CHANGES,v 1.4863 2004/02/16 19:40:39 hubertf Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -873,3 +873,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated gnome2-dirs to 1.4 [jmmv 2004-02-16]
 	Updated tkdiff to 3.09 [recht 2004-02-16]
 	Added p5-Scalar-List-Utils-1.13 [minskim 2004-02-16]
+	Updated nicotine to 1.0.7 [hubertf 2004-02-16]
